--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html" charset="ISO-8859-1" />
-	<title>Page Title</title>
+
+	<meta property="og:url"           content="http://www.nerdyowl.co/strictlyunique" />
+	<meta property="og:type"          content="website" />
+	<meta property="og:title"         content="Strictly Unique" />
+	<meta property="og:description"   content="The store where you can get the most original products in the world." />
+	<meta property="og:image"         content="http://nerdyowl.co/strictlyunique/images/fb-logo.png" />
+
+	<title>Strictly Unique</title>
 	<link rel="stylesheet" href="css/foundation.min.css">
 	<link rel="stylesheet" href="css/app.css">
 
@@ -16,6 +23,13 @@
 	<div id="container">
 		<div id="main" class='row large-12 columns'>
 			<!-- Page Content -->
+			<div class="fb-like" 
+				data-href="http://nerdyowl.co/strictlyunique" 
+				data-layout="standard" 
+				data-action="like" 
+				data-show-faces="true">
+			</div>
+	</div>
 		</div>
 		<div id="nav_bar" class="large-16 columns row">
 			<img src="images/logo.png" alt="logo" id='logo' />
@@ -26,5 +40,7 @@
 			</ul>
 		</div>
 	</div>
+
+<div id="fb-root"></div>
 </body>
 </html>
